--- a/webdevoloper-portfolio.html
+++ b/webdevoloper-portfolio.html
@@ -13,11 +13,11 @@ rel="stylesheet">
 <body class="pen-sans-normeal">
     <header>
         <nav>
-            <h3>Mary</h3>
+            <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
             <ul>
-                <li><a href="#">Profile</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#"></a><button>Hire Me</button></li>
+                <li><a class="dark-2" href="#">Profile</a></li>
+                <li><a class="dark-2" href="#">Blog</a></li>
+                <li><a  href="#"></a><button class="btn-primary">Hire Me</button></li>
             </ul>
         </nav>
     </header>
